--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,15 @@ astroid==2.4.2
 autopep8==1.5.4
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
 colorama==0.4.3
+Flask==1.1.2
 idna==2.10
 isort==5.5.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
 oauthlib==3.1.0
 pycodestyle==2.6.0
@@ -19,4 +24,5 @@ six==1.15.0
 toml==0.10.1
 tweepy==3.9.0
 urllib3==1.25.10
+Werkzeug==1.0.1
 wrapt==1.12.1
