--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+config==0.5.0.post0
 Flask==1.1.2
 idna==2.10
 isort==5.5.2
@@ -13,6 +14,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 oauthlib==3.1.0
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pylint==2.6.0
 PySocks==1.7.1
